# hawk-

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  dist-workspace.toml  pyproject.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: zizmor.yml
.github/workflows/: check-fmt.yml  check-lint.yml  check-zizmor.yml  ci.yml  publish-crates.yml  release-prepare.yml  release.yml  test.yml
docs/: architecture.md  configuration.md  mvp-design.md  usage.md
scripts/: check-release-changelog.sh  check-release-linkage.sh  release.sh  smoke-test-release.sh
src/: cli.rs  config.rs  diagnostics.rs  driver.rs  graph.rs  lib.rs  main.rs  protocol.rs  toolchain.rs
tests/: end_to_end.rs
tests/fixtures/ambiguous_packages/: Cargo.toml  hawk.toml
tests/fixtures/ambiguous_packages/app/: Cargo.toml
tests/fixtures/ambiguous_packages/app/src/: main.rs
tests/fixtures/ambiguous_packages/left/: Cargo.toml
tests/fixtures/ambiguous_packages/right/: Cargo.toml
tests/fixtures/ambiguous_packages/right/src/: lib.rs
tests/fixtures/basic/: Cargo.toml  hawk.toml
tests/fixtures/basic/app/: Cargo.toml
tests/fixtures/basic/app/src/: main.rs
tests/fixtures/basic/app/tests/: integration.rs
tests/fixtures/basic/macro_dep/: Cargo.toml
tests/fixtures/basic/macro_dep/src/: lib.rs
tests/fixtures/basic/test_support/: Cargo.toml
tests/fixtures/basic/test_support/src/: lib.rs
tests/fixtures/basic/unit_support/: Cargo.toml
tests/fixtures/basic/unit_support/src/: lib.rs
tests/fixtures/cfg_alternative_fixes/app/src/: main.rs
tests/fixtures/crate_visibility_fixes/: Cargo.toml
tests/fixtures/doctest_consumers/: Cargo.toml  hawk.toml
tests/fixtures/doctest_consumers/app/src/: main.rs
tests/fixtures/doctest_consumers/skipped/: Cargo.toml
tests/fixtures/doctest_consumers/skipped/src/: lib.rs
tests/fixtures/duplicate_library_names/: Cargo.toml
tests/fixtures/duplicate_library_names/app/: Cargo.toml
tests/fixtures/duplicate_library_names/app/src/: main.rs
tests/fixtures/duplicate_library_names/library-a/: Cargo.toml
tests/fixtures/duplicate_library_names/library-b/: Cargo.toml
tests/fixtures/exported_symbols/app/: Cargo.toml
tests/fixtures/exported_symbols/app/src/: main.rs
tests/fixtures/feature_profiles/: hawk.toml
tests/fixtures/feature_profiles/app/: Cargo.toml
tests/fixtures/feature_profiles/app/src/: main.rs
tests/fixtures/grouped_reexport_fixes/: hawk.toml
tests/fixtures/grouped_reexport_fixes/app/src/: main.rs
tests/fixtures/non_production_targets/: Cargo.toml
tests/fixtures/non_production_targets/app/: Cargo.toml
tests/fixtures/non_production_targets/app/benches/: consumer.rs
tests/fixtures/path_module_fixes/: hawk.toml
tests/fixtures/path_module_fixes/app/: Cargo.toml
tests/fixtures/production_consumers/: Cargo.toml  hawk.toml
tests/fixtures/production_consumers/app/src/: main.rs
tests/fixtures/production_consumers/secondary/: Cargo.toml
tests/fixtures/production_consumers/secondary/src/: main.rs
tests/fixtures/spanless_target_collision/: Cargo.toml  hawk.toml
tests/fixtures/spanless_target_collision/src/: lib.rs  main.rs
tests/fixtures/spanless_target_collision/tests/: same.rs
tests/fixtures/trait_dispatch/: Cargo.toml  hawk.toml
tests/fixtures/trait_dispatch/app/src/: main.rs
tests/fixtures/trait_dispatch/external_caller/: Cargo.toml
tests/fixtures/trait_dispatch/external_caller/src/: lib.rs
tests/fixtures/trait_dispatch/external_trait/: Cargo.toml
tests/snapshots/: end_to_end__cfg_alternative_fix_diff.snap  end_to_end__cfg_alternative_fix_output.snap  end_to_end__multiple_production_consumers.snap
(+1 files in other folders)
